# ai-squad

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  package-lock.json  platform.yaml  pyproject.toml  pyrightconfig.json  registry.yaml
.claude/commands/opsx/: propose.md
.claude/docs/: inteligencia.md
.claude/skills/openspec-propose/: SKILL.md
.devcontainer/: devcontainer.json
.github/skills/kanban-force-cli/: SKILL.md
.github/workflows/: publish.yml
agents/: TEMPLATE.md
agents/dev/: AGENTS.md
agents/dev-orchestrator/: AGENTS.md
agents/dev-web/: AGENTS.md  tools.yaml
agents/po/: AGENTS.md
agents/qa/: AGENTS.md
agents/squad-lead/: AGENTS.md
ai_dev_team.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ai_squad/: daemon.py  factory.py  path_resolver.py
ai_squad/adapters/: __init__.py  agno_adapter.py  claude_agent_sdk.py  copilot_adapter.py  interface.py  mcp_tools_server.py  prompt_builder.py
ai_squad/cli/: generate.py  main.py  team_manager.py  wizard.py
ai_squad/cli/generators/: __init__.py  agno.py  anthropic.py  copilot.py  interface.py  openai.py  prompt.py
ai_squad/cli/templates/: __init__.py  config.py
ai_squad/common/: __init__.py  events.py  retry.py  token_tracker.py
ai_squad/messaging/: cli.py  gchat.py  interface.py  registry.py  telegram.py  tui.py
ai_squad/orchestrator/: agent_runner.py  atomic_write.py  context.py  context_budget.py  conversation.py  daily_notes.py  engine.py  graph.py  ingest.py  journal.py  knowledge.py  lessons.py  media.py  model_router.py  pipeline.py  pipeline_handler.py  pipeline_state.py  prompt_builder.py  reaction_tracker.py  state.py  thread_map.py  thread_tracker.py  tools.py
ai_squad/whisper/: Dockerfile
docs/: DEPLOYMENT.md  architecture.html
openspec/changes/add-copilot-adapter/: proposal.md
openspec/changes/ai-dev-platform/: proposal.md  tasks.md
openspec/changes/cli-docker-multi-team/: design.md  tasks.md
openspec/changes/context-budget-optimization/: design.md  proposal.md  tasks.md
openspec/changes/forum-topics-multi-demand/: design.md  tasks.md
openspec/changes/framework-agnostic-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/generate-copilot-support/: tasks.md
openspec/changes/helpdesk-preset/: tasks.md
openspec/changes/local-mode/: design.md  tasks.md
openspec/changes/openspec-cli-feedback-flow/: design.md  proposal.md
openspec/changes/preset-investment-analysis/: design.md  proposal.md
openspec/changes/production-readiness-v1/: design.md  proposal.md  tasks.md
openspec/changes/squad-lead-async-delegation/: proposal.md
openspec/changes/squad-lead-intelligence/: design.md  tasks.md  (+1 more)
specs/: README.md
src/: daemon.py  factory.py  models.py
src/adapters/: agno_adapter.py  claude_agent_sdk.py  claude_code.py  copilot_adapter.py  interface.py  mcp_tools_server.py  prompt_builder.py
src/barramento/: cli.py  interface.py  telegram.py
src/cli/: __init__.py  generate.py  main.py  team_manager.py  wizard.py
src/docker/: Dockerfile  __init__.py
src/messaging/: cli.py  context.py  gchat.py  interface.py  registry.py  telegram.py  tui.py
src/orchestrator/: agent_runner.py  atomic_write.py  context.py  conversation.py  daily_notes.py  engine.py  ingest.py  journal.py  knowledge.py  lessons.py  media.py  model_router.py  pipeline.py  pipeline_state.py  prompt_builder.py  state.py  thread_map.py  thread_tracker.py  tools.py  verification.py  worktree.py
src/registry/: registry.py
src/whisper/: server.py
tests/: conftest.py  test_adapters.py  test_claude_agent_sdk.py  test_cli.py  test_cli_extended.py  test_conversation.py  test_copilot_adapter.py  test_daemon.py  test_daemon_coverage.py  test_daemon_deep.py  test_daemon_extended.py  test_daemon_forum_topics.py  test_daemon_run_coverage.py  test_docker.py  test_engine_cycle.py  test_engine_intelligence.py  test_factory.py  test_factory_coverage.py  test_factory_deep.py  test_factory_env.py  test_fallback_retry.py  test_heartbeat.py  test_integration.py  test_interfaces.py  test_journal.py  test_lessons.py  test_model_router.py  test_orchestrator.py  test_path_resolver.py  test_pipeline_state.py  test_registry.py  test_state.py  test_state_checkpoint.py  test_team_manager.py  test_telegram.py
tests/adapters/: test_adapter_prompt_builder.py  test_adapters.py  test_agno_adapter.py  test_claude_agent_sdk.py  test_claude_sdk_deep.py  test_fallback_retry.py  test_mcp_tools_server.py  test_mcp_tools_server_extended.py
tests/barramento/: test_barramento.py
tests/cli/: test_cli.py  test_cli_deep.py  test_cli_extended.py  test_generate.py  test_generate_deep.py  test_team_manager.py  test_validate_team_name.py  test_wizard.py
tests/common/: test_events.py  test_retry.py  test_token_tracker.py
tests/messaging/: test_activation_mode.py  test_cli.py  test_context.py  test_gchat.py  test_gchat_deep.py  test_gchat_extended.py  test_interface_defaults.py  test_registry.py  test_telegram.py  test_telegram_deep.py  test_telegram_extended.py  test_tui.py  test_tui_deep.py  test_tui_extended.py
tests/orchestrator/: test_agent_runner_coverage.py  test_agent_runner_utils.py  test_agent_session.py  test_atomic_write.py  test_circuit_breaker.py  test_context.py  test_context_budget.py  test_context_extended.py  test_conversation.py  test_daily_notes.py  test_engine_coverage.py  test_engine_cycle.py  test_engine_deep.py  test_engine_intelligence.py  test_engine_status.py  test_engine_thread.py  test_graph.py  test_heartbeat.py  test_helpdesk_integration.py  test_ingest.py  test_ingest_deep.py  test_ingest_extended.py  test_journal.py  test_knowledge.py  test_knowledge_extended.py  test_lessons.py  test_media.py  test_memory_on_demand.py  test_message_dedup.py  test_model_router.py  test_model_router_extended.py  test_orchestrator.py  test_pipeline.py  test_pipeline_handler.py  test_pipeline_state.py  test_prompt_builder_extended.py  test_reaction_tracker.py  test_semaphore.py  test_squad_lead.py  test_state.py  (+5 more)
(+248 files in other folders)
