[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-squad"
version = "0.2.3"
description = "Time completo de desenvolvimento autônomo por IA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tarcísio Junior", email = "tarcisiojr@gmail.com" },
]
keywords = ["ai", "agents", "multi-agent", "orchestration", "autonomous", "squad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/tarcisiojr/ai-squad"
Repository = "https://github.com/tarcisiojr/ai-squad"
Issues = "https://github.com/tarcisiojr/ai-squad/issues"

[project.scripts]
ai-squad = "src.cli.main:cli"

[project.optional-dependencies]
gchat = [
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]
agno = [
    "agno",
    "google-genai",
]
copilot = [
    "github-copilot-sdk>=0.1",
]
generate = [
    "anthropic>=0.40",
    "google-genai",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=75"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "presets/**/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length gerenciado pelo formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["src/whisper", "build", ".venv"]
reportMissingImports = "warning"
reportOptionalMemberAccess = "warning"
