[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-squad"
version = "1.0.0"
description = "Time completo de desenvolvimento autônomo por IA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tarcísio Junior", email = "tarcisiojr@gmail.com" },
]
keywords = ["ai", "agents", "multi-agent", "orchestration", "autonomous", "squad"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1",
    "aiohttp>=3.9",
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/tarcisiojr/ai-squad"
Repository = "https://github.com/tarcisiojr/ai-squad"
Issues = "https://github.com/tarcisiojr/ai-squad/issues"

[project.scripts]
ai-squad = "src.cli.main:cli"

[project.optional-dependencies]
gchat = [
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
agno = [
    "agno",
    "google-genai",
]
copilot = [
    "github-copilot-sdk>=0.1",
]
generate = [
    "anthropic>=0.40",
    "google-genai",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=68"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "presets/**/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length gerenciado pelo formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    "src/whisper",
    "src/daemon.py",
    "src/factory.py",
    "src/adapters/claude_agent_sdk.py",
    "src/adapters/copilot_adapter.py",
    "src/adapters/agno_adapter.py",
    "src/adapters/mcp_tools_server.py",
    "src/adapters/interface.py",
    "src/adapters/prompt_builder.py",
    "src/messaging/telegram.py",
    "src/messaging/gchat.py",
    "src/messaging/tui.py",
    "src/messaging/interface.py",
    "src/messaging/cli.py",
    "src/messaging/registry.py",
    "src/orchestrator/engine.py",
    "src/orchestrator/graph.py",
    "src/orchestrator/knowledge.py",
    "src/orchestrator/journal.py",
    "src/orchestrator/prompt_builder.py",
    "src/orchestrator/pipeline_state.py",
    "src/orchestrator/pipeline.py",
    "src/orchestrator/conversation.py",
    "src/orchestrator/ingest.py",
    "src/orchestrator/agent_runner.py",
    "src/orchestrator/state.py",
    "src/orchestrator/lessons.py",
    "src/orchestrator/context.py",
    "src/cli/main.py",
    "src/cli/generate.py",
    "src/cli/team_manager.py",
    "src/cli/generators/copilot.py",
    "src/cli/generators/agno.py",
    "src/cli/generators/anthropic.py",
    "src/cli/wizard.py",
    "src/orchestrator/reaction_tracker.py",
    "src/orchestrator/thread_tracker.py",
    "src/orchestrator/thread_map.py",
    "src/orchestrator/daily_notes.py",
    "build",
    ".venv",
]
reportMissingImports = "warning"
reportOptionalMemberAccess = "warning"
