[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-squad"
version = "1.0.0"
description = "Time completo de desenvolvimento autônomo por IA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tarcísio Junior", email = "tarcisiojr@gmail.com" },
]
keywords = ["ai", "agents", "multi-agent", "orchestration", "autonomous", "squad"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1",
    "aiohttp>=3.9",
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/tarcisiojr/ai-squad"
Repository = "https://github.com/tarcisiojr/ai-squad"
Issues = "https://github.com/tarcisiojr/ai-squad/issues"

[project.scripts]
ai-squad = "ai_squad.cli.main:cli"

[project.optional-dependencies]
gchat = [
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
agno = [
    "agno",
    "google-genai",
]
copilot = [
    "github-copilot-sdk>=0.1",
]
generate = [
    "anthropic>=0.40",
    "google-genai",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=ai_squad --cov-report=term-missing --cov-fail-under=68"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_squad*"]

[tool.setuptools.package-data]
ai_squad = [
    "presets/**/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length gerenciado pelo formatter

[tool.ruff.lint.isort]
known-first-party = ["ai_squad"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
extraPaths = ["."]
include = ["ai_squad"]
exclude = [
    "ai_squad/whisper",
    "ai_squad/daemon.py",
    "ai_squad/factory.py",
    "ai_squad/adapters/claude_agent_sdk.py",
    "ai_squad/adapters/copilot_adapter.py",
    "ai_squad/adapters/agno_adapter.py",
    "ai_squad/adapters/mcp_tools_server.py",
    "ai_squad/adapters/interface.py",
    "ai_squad/adapters/prompt_builder.py",
    "ai_squad/messaging/telegram.py",
    "ai_squad/messaging/gchat.py",
    "ai_squad/messaging/tui.py",
    "ai_squad/messaging/interface.py",
    "ai_squad/messaging/cli.py",
    "ai_squad/messaging/registry.py",
    "ai_squad/orchestrator/engine.py",
    "ai_squad/orchestrator/graph.py",
    "ai_squad/orchestrator/knowledge.py",
    "ai_squad/orchestrator/journal.py",
    "ai_squad/orchestrator/prompt_builder.py",
    "ai_squad/orchestrator/pipeline_state.py",
    "ai_squad/orchestrator/pipeline.py",
    "ai_squad/orchestrator/conversation.py",
    "ai_squad/orchestrator/ingest.py",
    "ai_squad/orchestrator/agent_runner.py",
    "ai_squad/orchestrator/state.py",
    "ai_squad/orchestrator/lessons.py",
    "ai_squad/orchestrator/context.py",
    "ai_squad/cli/main.py",
    "ai_squad/cli/generate.py",
    "ai_squad/cli/team_manager.py",
    "ai_squad/cli/generators/copilot.py",
    "ai_squad/cli/generators/agno.py",
    "ai_squad/cli/generators/anthropic.py",
    "ai_squad/cli/wizard.py",
    "ai_squad/orchestrator/reaction_tracker.py",
    "ai_squad/orchestrator/thread_tracker.py",
    "ai_squad/orchestrator/thread_map.py",
    "ai_squad/orchestrator/daily_notes.py",
    "build",
    ".venv",
]
reportMissingImports = "warning"
reportOptionalMemberAccess = "warning"
